changing html element ul li from softwear to software

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
                 <div class="tab-contents" id="education">
                     <ul>
-                        <li><span>A Seft Taught</span>~Softwear Developer</li>
+                        <li><span>A Seft Taught</span>~Software Developer</li>
                         <li>App Brewery courses</li>
                         <li>Udemy courses</li>
                        
