adding html three elements ui li

--- a/index.html
+++ b/index.html
@@ -142,6 +142,9 @@
                         <li>SQL</li>
                         <li>BOOTSTRAP 4</li>
                         <li>MANGOOSE</li>
+                        <li>JS angulaass</li>
+                        <li>JS angulaass</li>
+                        <li>JS angulaasse</li>
 
 
 
